--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 
 :root {
     --cell-size: calc(min(100vh, 120vw) / 11);
+    --N: 8;
 }
 
 .container {
@@ -114,6 +115,9 @@ body {
     grid-column-start: 2;
     width: 100%;
     height: 100%;
+}
+
+[contenteditable="true"] {
     outline: 0;
 }
 
@@ -129,16 +133,51 @@ body {
 
 .checkbox label {
     cursor: pointer;
-    /* translate: -5px -5px; */
     aspect-ratio: 1 / 1;
-    /* height: 100%; */
     width: calc(var(--cell-size));
     background-image: url(clock.svg);
     position: absolute;
-    /* display: block; */
     z-index: 1;
 }
 
 .checkbox input {
     display: none;
+}
+
+.queensnumber {
+    border-radius: 50px;
+    grid-column-start: 6;
+    grid-column-end: 8;
+    display: grid;
+    place-items: center;
+    border: 5px solid;
+    font-size: 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.queensnumber > div {
+    grid-column-start: 2;
+}
+
+.queensnumber::before {
+    content: url(queen.svg);
+    position: absolute;
+    width: calc(var(--cell-size) / 2);
+    translate: -100%;
+}
+
+
+.boardcontainer::after {
+    content: '';
+    position: absolute;
+    width: calc(var(--N) * var(--cell-size));
+    aspect-ratio: 1 / 1;
+    /* transform: translate(-5px, calc(-5px + var(--cell-size) * var(--N))); */
+    transform: translate(-5px, -5px);
+    translate: 0 calc((8 - var(--N)) * var(--cell-size));
+    transform-origin: bottom left;
+    /* transition: .3s; */
+    border-radius: 10px;
+    border: 5px solid;
 }
