--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
 :root {
     --cell-size: calc(min(100vh, 120vw) / 11);
     --N: 8;
+    --dark: rgb(100, 100, 100);
+    --white: rgb(255, 251, 231); 
 }
 
 .container {
@@ -26,17 +28,23 @@ body {
 }
 
 .boardcontainer {
-    display: flex;
-    flex-direction: column;
-    width: max-content;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* width: max-content; */
     border: 5px solid;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 40px 0;
+    display: grid;
+    grid-template-columns: repeat(8, var(--cell-size));
+    grid-template-rows: repeat(9, var(--cell-size));
+    /* grid-template-rows: 1fr; */
+    /* grid-auto-flow: column; */
 }
 
 .row, .waitrow {
     display: flex;
+    /* flex-direction: column; */
 }
 
 .row:last-child {
@@ -44,15 +52,16 @@ body {
 }
 
 .cell, .wait {
-    width: var(--cell-size);
-    aspect-ratio: 1 / 1;
+    /* width: var(--cell-size); */
+    /* aspect-ratio: 1 / 1; */
     display: grid;
     place-items: center;
+    z-index: 1;
 }
 
 .queen:after, .wait::after {
     content: '';
-    width: 90%;
+    width: 80%;
     aspect-ratio: 1 / 1;
     background-image: url(queen.svg);
 }
@@ -60,17 +69,31 @@ body {
 .wait:not(.queen)::after {
     opacity: .15;
 }
-
-.row:nth-child(odd) .cell:nth-child(odd),
-.row:nth-child(even) .cell:nth-child(even) {
-    background-color: rgb(255, 251, 231);
+.cell:nth-child(2n):nth-child(-n+8),
+.cell:nth-child(2n+9):nth-child(-n+15),
+.cell:nth-child(2n+18):nth-child(-n+24),
+.cell:nth-child(2n+25):nth-child(-n+31),
+.cell:nth-child(2n+34):nth-child(-n+40),
+.cell:nth-child(2n+41):nth-child(-n+47),
+.cell:nth-child(2n+50):nth-child(-n+56),
+.cell:nth-child(2n+57):nth-child(-n+63) {
+    background-color: var(--dark);
 }
 
-.row:nth-child(odd) .cell:nth-child(even),
-.row:nth-child(even) .cell:nth-child(odd) {
-    background-color: rgb(100, 100, 100);
+.cell:nth-child(2n-1):nth-child(-n+7),
+.cell:nth-child(2n+10):nth-child(-n+16),
+.cell:nth-child(2n+17):nth-child(-n+23),
+.cell:nth-child(2n+26):nth-child(-n+32),
+.cell:nth-child(2n+33):nth-child(-n+39),
+.cell:nth-child(2n+42):nth-child(-n+48),
+.cell:nth-child(2n+49):nth-child(-n+55),
+.cell:nth-child(2n+58):nth-child(-n+64) {
+    background-color: var(--white);
 }
 
+.cell:nth-child(n+65):nth-child(-n+72) {
+    border-top: 5px solid;
+}
 
 .start.btn {
     height: var(--cell-size);
@@ -87,9 +110,7 @@ body {
 }
 
 .checkbox {
-    /* grid-column-end: 7; */
     width: calc(3 * var(--cell-size) );
-    /* width: fit-content; */
     border-radius: 50px;
     overflow: hidden;
     transition: .3s;
@@ -137,7 +158,6 @@ body {
     width: calc(var(--cell-size));
     background-image: url(clock.svg);
     position: absolute;
-    z-index: 1;
 }
 
 .checkbox input {
@@ -152,7 +172,6 @@ body {
     place-items: center;
     border: 5px solid;
     font-size: 1.5rem;
-    display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
@@ -161,23 +180,15 @@ body {
 }
 
 .queensnumber::before {
-    content: url(queen.svg);
-    position: absolute;
+    content: '';
+    background-image: url(queen.svg);
     width: calc(var(--cell-size) / 2);
-    translate: -100%;
+    aspect-ratio: 1 / 1;
 }
 
-
-.boardcontainer::after {
-    content: '';
-    position: absolute;
-    width: calc(var(--N) * var(--cell-size));
-    aspect-ratio: 1 / 1;
-    /* transform: translate(-5px, calc(-5px + var(--cell-size) * var(--N))); */
-    transform: translate(-5px, -5px);
-    translate: 0 calc((8 - var(--N)) * var(--cell-size));
-    transform-origin: bottom left;
-    /* transition: .3s; */
-    border-radius: 10px;
-    border: 5px solid;
+.border {
+    grid-area: calc(8 - var(--N) + 1) / 1 / 10 / calc(var(--N) + 1);
+    box-shadow: 0 0 0 5px;
+    border-radius: 5px;
+    z-index: 1;
 }
